--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
 		"ts-node-dev": "^2.0.0"
 	},
